[package]
name = "rema-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
dashmap = "6.1.0"
regex = "1.11.1"
anyhow = "1.0.98"
